# steam-api

./: .gitignore  project.outline
steamcmdapi/: README.md  pyproject.toml
steamcmdapi/src/steamcmd_api/: __init__.py
steamcmdapi/src/steamcmd_api/data/steamcmd_scripts/windows/: run_game.bat
